[gd_scene load_steps=4 format=3 uid="uid://caklrinurnkp2"]

[ext_resource type="Script" path="res://scenes/entities/bullet/bullet_1.gd" id="1_3lchr"]
[ext_resource type="Texture2D" uid="uid://cq43cinervlw2" path="res://Sprites/bullet.png" id="1_4ykgc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4mewo"]
radius = 5.0

[node name="bullet_1" type="Area2D" groups=["Bullet"]]
light_mask = 2
visibility_layer = 2
collision_layer = 2
collision_mask = 44
script = ExtResource("1_3lchr")
speed = 35

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4ykgc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4mewo")

[node name="visible" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2.98023e-08)
scale = Vector2(0.4, 0.4)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="visible" to="." method="_on_visible_screen_exited"]
